--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.37.3",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -52,6 +53,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4.4.1",
+    "react-textarea-autosize": "^8.5.9",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
